# BTS

./: .gitignore  README.md  Stage.py  presentation.pptx  requirements.txt  setup.sh
PC/: camera.py  crop.py  main.py  object_classify.py  object_detection.py  requirements.txt  single_thread.py
PC/Client/: camera.py  object_detection.py  send_frame.py
PC/Server/: gui.py  receive_frame.py  receiver.py  sender.py
RaspberryPi/: CMakeLists.txt  Rasp2Server.py  main.cpp  rasp2server.py
RaspberryPi/UDP/: receiver.py  sender.py
RaspberryPi/_deprecated/HW/: led.cpp
RaspberryPi/_deprecated/UDP/: receiver.cpp
RaspberryPi/_deprecated/led/: servo (수정).cpp
RaspberryPi/includes/: led.h  stage.h  weapon.h
RaspberryPi/led/: .servo.cpp.swp  led  led.cpp  servo  servo.cpp  step  step.cpp
RaspberryPi/lib/: CMakeLists.txt  led.cpp
Server/: main.py  object_detection.py  send_frame.py
User/: gui.py  main.py  receive_frame.py  receiver.py  sender.py
_deprecated/: image_crop.py  single_thread.py
_deprecated/HW/: step.cpp
_deprecated/sample_code/: pc.py  stage.py
model/classification/car_v1/: eval_record.txt  openvino.xml  train_record.txt
model/classification/car_v2/: eval_record.txt  openvino.xml
model/classification/car_v3/: eval_record.txt  train_record.txt
model/classification/plane_v1/: train_record.txt
model/classification/plane_v2/: openvino.xml  train_record.txt
model/classification/plane_v3/: eval_record.txt  openvino.xml  train_record.txt
python sample code/: BTS_main.py  led.py  stage.py
sample_code/: BTS_main.py  weapon.py
(+13 files in other folders)
